# wq

./: README.md  pyproject.toml  test_wq.py  test_wq_integration.py  wq  wq.py
data/share/fish/vendor_completions.d/: wq.fish
