[project]
name = "wq"
description = "A single-user job scheduling system"
version = "0.1"
authors = [{name = "Vitaly Magerya"}]
readme = "README.md"
requires-python = "~= 3.10"
dependencies = [
    "aiohttp ~= 3.9.5",
    "msgspec ~= 0.18.6"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Clustering"
]

[project.scripts]
wq = "wq:main"

[project.urls]
Homepage = "https://github.com/magv/wq"

[project.optional-dependencies]
test = [
    "pytest ~= 8.3.2",
    "tomli-w ~= 1.0.0"
]

[build-system]
requires = ["flit_core ~= 3.7"]
build-backend = "flit_core.buildapi"

[tool.flit.external-data]
directory = "data"
