[project]
name = "wq"
description = "A single-user job scheduling system"
authors = [{name = "Vitaly Magerya"}]
readme = "README.md"
requires-python = "~= 3.10"
dependencies = [
    "aiohttp ~= 3.9.5",
    "msgspec ~= 0.18.6",
    "tomlkit ~= 0.13.0"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Clustering"
]
dynamic = ["version"]

[project.scripts]
wq = "wq:main"

[project.urls]
Homepage = "https://github.com/magv/wq"

[project.optional-dependencies]
test = [
    "pytest ~= 8.3.2"
]

[build-system]
requires = ["pdm-backend ~= 2.4.3"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["wq.py", "data/**/*"]

[tool.pdm.build.wheel-data]
data = [{path = "data/**/*", relative-to = "data"}]

[tool.pdm.version]
source = "scm"
